--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "plant-care-r2",
   "version": "0.3.0",
   "private": true,
-  "scripts": {
+   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "db:push": "prisma db push",
     "prisma:generate": "prisma generate",
