--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "plant-care-r2",
   "version": "0.3.0",
   "private": true,
-   "scripts": {
+  "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
@@ -15,6 +15,8 @@
     "@aws-sdk/client-s3": "^3.863.0",
     "@aws-sdk/s3-request-presigner": "^3.863.0",
     "@prisma/client": "^5.22.0",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/supabase-js": "^2.54.0",
     "date-fns": "^3.6.0",
     "next": "^14.2.5",
     "react": "^18.3.1",
