feat: send daily task digest emails

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/tasks/daily",
       "schedule": "0 7 * * *"
+    },
+    {
+      "path": "/api/tasks/reminder",
+      "schedule": "5 7 * * *"
     }
   ]
 }
