--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "plant-care-r2",
   "version": "0.3.0",
   "private": true,
-   "scripts": {
+  "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.22.0",
     "date-fns": "^3.6.0",
     "next": "^14.2.5",
+    "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.8"
