chore: add placeholder test script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "db:push": "prisma db push",
     "prisma:generate": "prisma generate",
     "seed": "tsx prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "echo \"No tests yet\" && exit 0"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.863.0",
