--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@aws-sdk/client-s3": "^3.863.0",
     "@aws-sdk/s3-request-presigner": "^3.863.0",
     "@prisma/client": "^5.22.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.54.0",
     "date-fns": "^3.6.0",
     "next": "^14.2.5",
     "nodemailer": "^7.0.5",
