--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "db:push": "prisma db push",
     "prisma:generate": "prisma generate",
     "seed": "tsx prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "vitest run"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.863.0",
@@ -20,7 +21,9 @@
     "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@supabase/supabase-js": "^2.54.0",
+    "@supabase/ssr": "^0.6.1"
   },
   "devDependencies": {
     "@types/node": "24.2.0",
@@ -30,6 +33,8 @@
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.7",
     "tsx": "^4.15.7",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vitest": "^3.2.4",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
