Integrate Supabase auth

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ TREFLE_TOKEN=""
 # Optional: default lat/lon for weather snapshots
 DEFAULT_LAT="44.9778"
 DEFAULT_LON="-93.2650"
+
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=""
+NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+SUPABASE_SERVICE_ROLE_KEY=""
