--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "date-fns": "^3.6.0",
     "next": "^14.2.5",
     "nodemailer": "^7.0.5",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.44.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.8"
