--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prisma:generate": "prisma generate",
     "seed": "tsx prisma/seed.ts",
     "postinstall": "prisma generate",
-    "test": "echo \"No tests yet\" && exit 0"
+    "test": "node --import tsx --test tests/access.test.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.863.0",
@@ -27,9 +27,10 @@
   },
   "devDependencies": {
     "@types/node": "24.2.0",
-    "@types/react": "19.1.9",
     "@types/nodemailer": "^6.4.12",
+    "@types/react": "19.1.9",
     "autoprefixer": "^10.4.18",
+    "esmock": "^2.7.1",
     "postcss": "^8.4.38",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.7",
