Add Supabase client, server utilities and authentication flow

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?pgbouncer=true&connection_limit=1"
 DIRECT_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
 
+# Supabase API
+NEXT_PUBLIC_SUPABASE_URL=""
+NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+SUPABASE_SERVICE_ROLE_KEY=""
+
 # Cloudflare R2 (S3 API)
 R2_ACCOUNT_ID="xxxxxxxxxxxxxxxxxxxxx"
 R2_ACCESS_KEY_ID="XXXXXXXXXXXXXXXX"
