--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/s3-request-presigner": "^3.863.0",
     "@prisma/client": "^5.22.0",
     "@supabase/ssr": "^0.6.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.54.0",
     "date-fns": "^3.6.0",
     "next": "^14.2.5",
