docs: add Supabase auth env vars

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,11 @@
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?pgbouncer=true&connection_limit=1"
 DIRECT_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
 
-# Supabase API
-NEXT_PUBLIC_SUPABASE_URL=""
-NEXT_PUBLIC_SUPABASE_ANON_KEY=""
-SUPABASE_SERVICE_ROLE_KEY=""
+# Supabase API (Settings ➜ API)
+# Project URL, anon key for client-side Auth helpers, and service role key for server-side calls
+NEXT_PUBLIC_SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY"
+SUPABASE_SERVICE_ROLE_KEY="YOUR_SUPABASE_SERVICE_ROLE_KEY"
 
 # Cloudflare R2 (S3 API)
 R2_ACCOUNT_ID="xxxxxxxxxxxxxxxxxxxxx"
