feat: add server-side image processing pipeline

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,12 @@ R2_BUCKET="plant-care"
 NEXT_PUBLIC_R2_PUBLIC_HOSTNAME="pub-xxxxxxxxxxxxx.r2.dev"
 NEXT_PUBLIC_R2_CUSTOM_HOSTNAME=""
 
+# Redis for background jobs
+REDIS_URL="redis://localhost:6379"
+
+# Optional Cloudflare image resizing base (e.g. https://example.com)
+NEXT_PUBLIC_CF_IMAGE_BASE=""
+
 # Optional species enrich (leave blank to skip)
 TREFLE_TOKEN=""
 
