--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prisma:generate": "prisma generate",
     "seed": "tsx prisma/seed.ts",
     "postinstall": "prisma generate",
-    "test": "node --import tsx --test tests/access.test.ts"
+    "test": "node --import tsx --test tests/access.test.ts",
+    "worker": "node --import tsx src/worker/imageProcessor.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.863.0",
@@ -23,6 +24,9 @@
     "date-fns": "^3.6.0",
     "next": "^14.2.5",
     "nodemailer": "^7.0.5",
+    "bullmq": "^4.12.0",
+    "ioredis": "^5.4.1",
+    "sharp": "^0.33.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.8"
