--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "seed": "tsx prisma/seed.ts",
     "postinstall": "prisma generate",
     "test": "node --import tsx --test tests/access.test.ts",
-    "worker": "node --import tsx src/worker/imageProcessor.ts"
+    "worker": "node --import tsx src/worker/imageProcessor.ts",
+    "report:monthly": "node --import tsx scripts/exportMonthlyReport.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.863.0",
@@ -21,14 +22,16 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.54.0",
     "@vercel/analytics": "^1.5.0",
-    "date-fns": "^3.6.0",
-    "next": "^14.2.5",
-    "nodemailer": "^7.0.5",
     "bullmq": "^4.12.0",
+    "date-fns": "^3.6.0",
     "ioredis": "^5.4.1",
-    "sharp": "^0.33.2",
+    "next": "^14.2.5",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sharp": "^0.33.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
