--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prisma:generate": "prisma generate",
     "seed": "tsx prisma/seed.ts",
     "postinstall": "prisma generate",
-    "test": "node --import tsx --test tests/access.test.ts",
+    "test": "node --import tsx --test tests/*.test.ts",
     "worker": "node --import tsx src/worker/imageProcessor.ts",
     "report:monthly": "node --import tsx scripts/exportMonthlyReport.ts",
     "backup:verify": "node --import tsx scripts/verifyBackup.ts"
